@@ -146,6 +146,8 @@ PIG-2228: support partial aggregation in map task (thejas)
 
 BUG FIXES
 
+PIG-2313: NPE in ILLUSTRATE trying to get StatusReporter in STORE (daijy)
+
 PIG-2335: bin/pig does not work with bash 3.0 (azaroth)
 
 PIG-2275: NullPointerException from ILLUSTRATE (daijy)
